Agregados curriculums recientes

--- a/src/modules/navbar_es.html
+++ b/src/modules/navbar_es.html
@@ -12,7 +12,7 @@
         <li><a class="nav-link" href="/es/index.html#">CONTACTO</a></li>
         <li><a class="nav-link" href="/es/blogs.html">BLOG</a></li>
         <li>
-          <a class="nav-link btn btn-primary" href="/src/assets/CV_eng.pdf" target="_blank" rel="noopener noreferrer">
+          <a class="nav-link btn btn-primary" href="/src/assets/CV_esp.pdf" target="_blank" rel="noopener noreferrer">
             CURRICULUM <i class="fas fa-arrow-right"></i>
           </a>
         </li>
