--- a/src/project_posts/projects_cherrypicked.html
+++ b/src/project_posts/projects_cherrypicked.html
@@ -32,7 +32,7 @@
             <article class="project">
                 <!-- Project 1 -->
                 <div class="card project1"
-                    onclick="window.location.href = '/projects/project1.html'">
+                    onclick="window.location.href = '/projects/paper.html'">
                     <div class="card-aspect-ratio">
                         <div class="project-info">
                             <div class="project-bio">
@@ -52,7 +52,7 @@
 
                 <!-- Project 2 -->
                 <div class="card project2"
-                    onclick="window.location.href = '/projects/project2.html'">
+                    onclick="window.location.href = '/projects/iter.html'">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Iter: Modularity at the heart of robotics
