modified:   src/project_posts/projects_cherrypicked_es.html

--- a/src/project_posts/projects_cherrypicked_es.html
+++ b/src/project_posts/projects_cherrypicked_es.html
@@ -32,7 +32,7 @@
             <article class="project">
                 <!-- Project 1 -->
                 <div class="card project1"
-                    onclick="window.location.href = '/projects/paper.html'">
+                    onclick="window.location.href = '/es/projects/paper.html'">
                     <div class="card-aspect-ratio">
                         <div class="project-info">
                             <div class="project-bio">
@@ -51,7 +51,7 @@
 
                 <!-- Project 2 -->
                 <div class="card project2"
-                    onclick="window.location.href = '/projects/iter.html'">
+                    onclick="window.location.href = '/es/projects/iter.html'">
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Iter: Modularidad como concepto en el diseño de
