Card image project 1 fixed

--- a/src/project_posts/projects_cherrypicked_es.html
+++ b/src/project_posts/projects_cherrypicked_es.html
@@ -31,7 +31,7 @@
 
             <article class="project">
                 <!-- Project 1 -->
-                <div class="card project1"
+                <div class="card project1V2"
                     onclick="window.location.href = '/es/projects/paper.html'">
                     <div class="card-aspect-ratio">
                         <div class="project-info">
