Chery picked project esp button see more fixed correct redirection to spanish general projects

--- a/src/project_posts/projects_cherrypicked_es.html
+++ b/src/project_posts/projects_cherrypicked_es.html
@@ -70,7 +70,7 @@
                 </div>
             </article>
 
-            <a href="/projects.html" class="btn btn-secondary">Ver más <i
+            <a href="/es/projects.html" class="btn btn-secondary">Ver más <i
                     class="fas fa-arrow-right"></i></a>
         </section>
 
