3v3 Circuit project added, fixed height rows of projects

--- a/src/project_posts/projects_cherrypicked.html
+++ b/src/project_posts/projects_cherrypicked.html
@@ -72,6 +72,21 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 4 -->
+                <div class="card project4"
+                    onclick="window.location.href = '/projects/3v3_charger_circuit.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Make every 3v3 device rechargeable</h3>
+                            <p>This is a circuit that was design to charge a 3.7
+                                V lipo battery and, if is necessary, act as a
+                                power supply, in both cases the the output
+                                voltage is 3.3 V.</p>
+                        </div>
+                    </div>
+                </div>
+
             </article>
 
             <a href="/projects.html" class="btn btn-secondary">See More <i
