--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -36,7 +36,8 @@
                     <div class="card-aspect-ratio">
                         <div class="project-info">
                             <div class="project-bio">
-                                <h3>Published research: Autonomous mobile robotics</h3>
+                                <h3>Published research: Autonomous mobile
+                                    robotics</h3>
                                 <p>Designing a python library to generate
                                     navigation
                                     strategies
@@ -90,6 +91,20 @@
                                 explore vast knowledge bases, and how they
                                 assist in finding valuable insights and
                                 applications.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 4 -->
+                <div class="card project4"
+                    onclick="window.location.href = '/projects/3v3_charger_circuit.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Make every 3v3 device rechargeable</h3>
+                            <p>This is a circuit that was design to charge a 3.7
+                                V lipo battery and, if is necessary, act as a
+                                power supply, in both cases the the output
+                                voltage is 3.3 V.</p>
                         </div>
                     </div>
                 </div>
