--- a/src/project_posts/projects_cherrypicked_es.html
+++ b/src/project_posts/projects_cherrypicked_es.html
@@ -68,6 +68,22 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 4 -->
+                <div class="card project4"
+                    onclick="window.location.href = '/es/projects/3v3_charger_circuit.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Hacer que todos los dispositivos 3v3 sean
+                                recargables</h3>
+                            <p>Este es un circuito diseñado para cargar una
+                                batería lipo de 3.7V y, si es necesario,
+                                actuar como una fuente de alimentación, en ambos
+                                casos la salida de voltaje es de 3.3V.</p>
+                        </div>
+                    </div>
+                </div>
+
             </article>
 
             <a href="/es/projects.html" class="btn btn-secondary">Ver más <i
