Added aina project in eng only

--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -109,6 +109,17 @@
                     </div>
                 </div>
 
+                <!-- Project 5 -->
+                <div class="card project5"
+                    onclick="window.location.href = '/projects/aina.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Aina - Humanoid plataform ROS robot</h3>
+                            <p>The Journey of Exploring Social Interactions through Aina, My First Experience as an Open-Source Humanoid Robot Developer</p>
+                        </div>
+                    </div>
+                </div>
+
             </article>
 
         </section>
