Aine project in spanish added

--- a/projects/aina.html
+++ b/projects/aina.html
@@ -562,6 +562,9 @@
             open-source humanoid robot developer, and I'm excited to share more
             about its capabilities and potential applications.</p>
 
+            <img src="/src/project_posts/project5/heads.png"
+            alt="Isaac Sim research outcome paths">
+
         </div>
         <div class="division-space-only"></div>
 
