--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -104,6 +104,17 @@
             </div>
         </div>
 
+        <!-- Project 5 -->
+        <div class="card project5"
+        onclick="window.location.href = '/es/projects/aina.html'">
+        <div class="project-info">
+            <div class="project-bio">
+                <h3>Aina - Plataforma de robot humanoide basada en ROS</h3>
+                <p>Explorando las interacciones sociales a través de Aina, mi primera experiencia como desarrollador de robots humanoides de código abierto</p>
+            </div>
+        </div>
+    </div>
+
             </article>
 
         </section>
