--- a/src/project_posts/projects.html
+++ b/src/project_posts/projects.html
@@ -33,19 +33,17 @@
                 <!-- Project 1 -->
                 <div class="card project1V2"
                     onclick="window.location.href = '/projects/paper.html'">
-                    <div class="card-aspect-ratio">
-                        <div class="project-info">
-                            <div class="project-bio">
-                                <h3>Published research: Autonomous mobile
-                                    robotics</h3>
-                                <p>Designing a python library to generate
-                                    navigation
-                                    strategies
-                                    for different types of mobile robots with
-                                    Deep
-                                    Reinforcement
-                                    Learning in Nvidia Isaac Sim.</p>
-                            </div>
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Published research: Autonomous mobile
+                                robotics</h3>
+                            <p>Designing a python library to generate
+                                navigation
+                                strategies
+                                for different types of mobile robots with
+                                Deep
+                                Reinforcement
+                                Learning in Nvidia Isaac Sim.</p>
                         </div>
                     </div>
                 </div>
@@ -115,7 +113,9 @@
                     <div class="project-info">
                         <div class="project-bio">
                             <h3>Aina - Humanoid plataform ROS robot</h3>
-                            <p>The Journey of Exploring Social Interactions through Aina, My First Experience as an Open-Source Humanoid Robot Developer</p>
+                            <p>The Journey of Exploring Social Interactions
+                                through Aina, My First Experience as an
+                                Open-Source Humanoid Robot Developer</p>
                         </div>
                     </div>
                 </div>
