--- a/src/project_posts/projects_es.html
+++ b/src/project_posts/projects_es.html
@@ -33,18 +33,15 @@
                 <!-- Project 1 -->
                 <div class="card project1V2"
                     onclick="window.location.href = '/es/projects/paper.html'">
-                    <div class="card-aspect-ratio">
-                        <div class="project-info">
-                            <div class="project-bio">
-                                <h3>Investigación publicada: Robótica móvil
-                                    autónoma</h3>
-                                <p>Diseñando una biblioteca en Python para
-                                    generar estrategias de navegación para
-                                    diferentes tipos de robots móviles con
-                                    Aprendizaje Profundo por Refuerzo en Nvidia
-                                    Isaac Sim.</p>
-
-                            </div>
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Investigación publicada: Robótica móvil
+                                autónoma</h3>
+                            <p>Diseñando una biblioteca en Python para
+                                generar estrategias de navegación para
+                                diferentes tipos de robots móviles con
+                                Aprendizaje Profundo por Refuerzo en Nvidia
+                                Isaac Sim.</p>
                         </div>
                     </div>
                 </div>
@@ -88,32 +85,35 @@
                         </div>
                     </div>
                 </div>
-            
-            <!-- Project 4 -->
-            <div class="card project4"
-            onclick="window.location.href = '/es/projects/3v3_charger_circuit.html'">
-            <div class="project-info">
-                <div class="project-bio">
-                    <h3>Hacer que todos los dispositivos 3v3 sean
-                        recargables</h3>
-                    <p>Este es un circuito diseñado para cargar una
-                        batería lipo de 3.7V y, si es necesario,
-                        actuar como una fuente de alimentación, en ambos
-                        casos la salida de voltaje es de 3.3V.</p>
-                </div>
-            </div>
-        </div>
 
-        <!-- Project 5 -->
-        <div class="card project5"
-        onclick="window.location.href = '/es/projects/aina.html'">
-        <div class="project-info">
-            <div class="project-bio">
-                <h3>Aina - Plataforma de robot humanoide basada en ROS</h3>
-                <p>Explorando las interacciones sociales a través de Aina, mi primera experiencia como desarrollador de robots humanoides de código abierto</p>
-            </div>
-        </div>
-    </div>
+                <!-- Project 4 -->
+                <div class="card project4"
+                    onclick="window.location.href = '/es/projects/3v3_charger_circuit.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Hacer que todos los dispositivos 3v3 sean
+                                recargables</h3>
+                            <p>Este es un circuito diseñado para cargar una
+                                batería lipo de 3.7V y, si es necesario,
+                                actuar como una fuente de alimentación, en ambos
+                                casos la salida de voltaje es de 3.3V.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 5 -->
+                <div class="card project5"
+                    onclick="window.location.href = '/es/projects/aina.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Aina - Plataforma de robot humanoide basada en
+                                ROS</h3>
+                            <p>Explorando las interacciones sociales a través de
+                                Aina, mi primera experiencia como desarrollador
+                                de robots humanoides de código abierto</p>
+                        </div>
+                    </div>
+                </div>
 
             </article>
 
