blog 2 eng added

--- a/src/blog_posts/blogs.html
+++ b/src/blog_posts/blogs.html
@@ -33,17 +33,31 @@
                 <!-- Blog 1 -->
                 <div class="card blog1"
                     onclick="window.location.href = '/blogs/hybrid_prompts.html'">
-                    <div class="card-aspect-ratio">
-                        <div class="project-info">
-                            <div class="project-bio">
-                                <h3>Hybrid Prompts: Guide to Effective Conversational AI</h3>
-                                <p>Discover how combining closed-ended questions
-                                    with open-ended prompts can revolutionize
-                                    your conversational AI experiences. Learn
-                                    how hybrid prompts can help create more
-                                    realistic, engaging, and empathetic
-                                    interactions with virtual beings.</p>
-                            </div>
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Hybrid Prompts: Guide to Effective
+                                Conversational AI</h3>
+                            <p>Discover how combining closed-ended questions
+                                with open-ended prompts can revolutionize
+                                your conversational AI experiences. Learn
+                                how hybrid prompts can help create more
+                                realistic, engaging, and empathetic
+                                interactions with virtual beings.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Blog 1 -->
+                <div class="card blog2"
+                    onclick="window.location.href = '/blogs/synthetic_lover.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>The Synthetic Lover: A New Era in Sexual
+                                Exploration</h3>
+                            <p>As the lines between fantasy and reality continue
+                                to blur, a new generation of artificial sexual companions is emerging.
+                                But what does this mean for our relationships, our desires, and our
+                                very understanding of what it means to be human?</p>
                         </div>
                     </div>
                 </div>
