some minnor fixes

--- a/es/blogs/synthetic_lover.html
+++ b/es/blogs/synthetic_lover.html
@@ -26,184 +26,108 @@
       <div id="navbar-placeholder"></div>
 
       <div id="content-blog">
-        <h1 class="massiveHeading">Prompts híbridos: Guía para una IA
-          Conversacional Efectiva</h1>
+        <h1 class="massiveHeading">The Synthetic Lover: A New Era in Sexual
+          Exploration</h1>
         <p class="categories">
           <span class="category">AI</span>
         </p>
 
-        <h2 class="subtitle">Los prompts híbridos surgen de la intersección de
-          dos
-          conceptos: el espacio latente de los modelos de lenguaje grandes y la
-          zona de soluciones latentes en arqueología. Al combinar estas ideas,
-          este enfoque busca descubrir ideas para crear compañeros virtuales más
-          realistas e inmersivos.</h2>
+        <h2 class="subtitle">As the lines between fantasy and reality continue
+          to blur, a new generation of artificial sexual companions is emerging.
+          But what does this mean for our relationships, our desires, and our
+          very understanding of what it means to be human?</h2>
 
-        <img class="gif" src="/src/blog_posts/blog1/placeholder.png"
+        <img class="gif" src="/src/blog_posts/blog2/cyberlover3.png"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
 
-        <p>A medida que ampliamos los límites en la IA conversacional, buscamos
-          formas innovadoras de crear interacciones más realistas, inmersivas y
-          empáticas con nuestros compañeros virtuales. El concepto de la
-          "Zona de Soluciones Latentes" (ZSL) en la arqueología proporciona una
-          analogía intrigante para comprender el espacio latente de los modelos
-          de lenguaje. Inspirados en esta idea, los prompts híbridos ofrecen un
-          enfoque único para elaborar una IA conversacional que combina los
-          beneficios de las preguntas cerradas y las sugerencias abiertas. Al
-          aprovechar las fortalezas de nuestros modelos de IA y alentar
-          interacciones creativas y reflexivas, podemos crear experiencias cada
-          vez más naturales y emocionales.</p>
+        <p>Las interacciones sexuales con seres artificiales han sido un tema
+          controvertido durante algún tiempo, pero ¿qué hay debajo de la
+          superficie? Los investigadores proponen que las personas tienden a
+          responder a los robots sexualizados casi de la misma manera que
+          responderían a otros humanos. Para entender mejor este fenómeno,
+          debemos adentrarnos en el mundo de la psicología y la tecnología.</p>
 
-        <h3>Espacio Latente y ZLS</h3>
-        <p>El concepto de ZLS se refiere al conjunto de soluciones o
-          comportamientos que un individuo o grupo podría inventar o descubrir
-          potencialmente de forma independiente, dadas sus conocimientos y
-          capacidades actuales. De manera similar, el espacio latente de un
-          modelo de lenguaje representa la amplia gama de comportamientos y
-          conocimientos posibles codificados, guiando las respuestas que puede
-          generar en función de sus datos de entrenamiento. Además, el espacio
-          latente de un modelo de lenguaje no es fijo; evoluciona a medida que
-          se agregan nuevos datos a su conjunto de entrenamiento, o de manera
-          más reducida, mediante su ventana de contexto. Esto significa
-          que los prompts híbridos pueden fomentar respuestas más matizadas y
-          reflexivas al proporcionar al modelo de IA nueva información y
-          contexto para basarse. Al aprovechar la naturaleza dinámica de la
-          ventana de contexto, podemos crear IA conversacional capaz de
-          adaptarse a
-          nuevas situaciones y contextos, guiando su zona de soluciones
-          latentes. Explorar la relación entre estos dos conceptos nos permite
-          comprender mejor cómo los prompts híbridos aprovechan las fortalezas
-          de nuestros modelos de IA para generar un tipo especifico de
-          interacciones con seres virtuales.</p>
+        <p>Una teoría que intenta capturar todos los factores relevantes que
+          contribuyen o reducen la ilusión de las interacciones sexuales reales
+          con socios basados en tecnología es la
+          "ilusión de interacción sexual". Según esta teoría, los usuarios
+          podrían responder automáticamente a las interacciones sexuales
+          artificiales como lo harían con sus contrapartes de la vida real, a
+          pesar de saber conscientemente que solo están interactuando con
+          tecnología. Este fenómeno puede explicarse por la teoría de la
+          ecuación de los medios, que propone que los humanos tienden a tratar a
+          las máquinas, como computadoras y robots, como si fueran personas
+          reales.</p>
 
-        <img class="gif" src="/src/blog_posts/blog1/cyberwoman2.png"
+        <img class="gif" src="/src/blog_posts/blog2/cyberlover1.png"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
 
-        <h3>¿Qué son los Prompts Híbridos?</h3>
-        <p>Los prompts híbridos combinan preguntas cerradas, que brindan
-          orientación sobre cómo el modelo debe expresarse y el tono
-          conversacional que debe utilizar, y prompts abiertos, que permiten una
-          exploración más libre en el espacio latente, guiando cómo el modelo de
-          lenguaje debe relacionar la entrada del usuario con este último.
-          Este proceso es equivalente a encontrar y aplicar esas
-          soluciones potenciales de la ZLS en la arqueología. Este enfoque nos
-          permite crear respuestas que son informativas y atractivas, al mismo
-          tiempo que fomentan interacciones más emocionales e inmersivas.
-          Además de esto, los prompts
-          híbridos pueden proporcionar al modelo de IA nueva información y
-          contexto para basar su identidad y contexto del entorno con el cual
-          interactúa. Esto es particularmente importante cuando se
-          trata de temas complejos o cargados emocionalmente, donde se requiere
-          una respuesta más empática y comprensiva.</p>
+        <p>Esta tendencia puede llevar a una difuminación de las líneas entre la
+          realidad y la fantasía, lo cual es particularmente relevante en el
+          contexto de las interacciones sexuales con acompañantes artificiales.
+          La "suspensión voluntaria de la incredulidad" nos permite sumergirnos
+          completamente en un mundo o escenario ficticio, y en este caso, puede
+          conducir a una experiencia emocional intensa para el usuario.</p>
 
-        <h3>Cómo Crear Prompts Híbridos Efectivos</h3>
-        <p>Para crear prompts híbridos efectivos, propongo esta estructura:</p>
-        <ol>
-          <li><strong>Principios Orientadores:</strong> Prompts cerrados, como
-            la identidad y rasgos de personalidad del compañero virtual.</li>
-          <li><strong>Direcciones de Exploración:</strong> Prompts como
-            preguntas abiertas con sugerencias declarativas sobre cómo pensar en
-            los datos en el espacio latente.</li>
-          <li><strong>Contexto:</strong> Conciencia situacional, describiendo la
-            situación en la que se utiliza el chatbot y con quién.</li>
-        </ol>
+        <p>Sin embargo, también hay riesgos potenciales asociados con el uso de
+          compañeros artificiales para fines sexuales. Estos incluyen la
+          posibilidad de explotación o abuso, así como el riesgo de depender
+          emocionalmente de la tecnología. El concepto de "ajuste a la realidad"
+          es crucial aquí, donde los estereotipos dados al máquina por las
+          expectativas del usuario deben ser en concordancia con su propio
+          script sexual. Si el usuario se siente que puede desviarse de estas
+          normas, pueden haber conflictos para crear y mantener la suspensión de
+          la incredulidad.</p>
 
-        <p>Cuando se crean prompts híbridos, es esencial encontrar un equilibrio
-          entre brindar orientación clara y fomentar la exploración libre. Al
-          usar una combinación de preguntas cerradas y prompts abiertos, podemos
-          crear respuestas completas, con información correcta y un tono
-          emocional adecuado. Además, el
-          contexto en el que se utiliza el prompt es crucial para crear una
-          comunicación efectiva. Proporcionar un contexto específico o
-          información
-          de antecedentes puede ayudar al modelo de IA a comprender mejor la
-          situación y responder de manera más adecuada. Esto es especialmente
-          importante cuando se trata de temas complejos o emocionalmente
-          cargados, donde se requiere una comprensión más profunda del
-          contexto.</p>
+        <p>The necessary cues for that can be represented as verbal and
+          nonverbal signs where the response is likely to follow if the decisive
+          cues are presented. However, to what extent? If we consider the world
+          of pornographic mangas and hentai, it's possible to say that these
+          cues may not need to be realistic, being possible to use more abstract
+          cues.</p>
 
-        <img class="gif" src="/src/blog_posts/blog1/cyberwoman1.png"
+        <img class="gif" src="/src/blog_posts/blog2/cyberlover2.png"
           alt="Isaac Sim Deep Learning simmulation with Kaya">
 
-        <div>
-          <h3>Ejemplo: Prompt Híbrido para el Compañero Personal "Manion"</h3>
-          <p>Aquí tienes un ejemplo de un prompt híbrido para un compañero
-            personal llamado Manion.</p>
-          <p><strong>Principios Orientadores:</strong> Eres Manion, un compañero
-            personal de IA cálido, empático y infinitamente paciente. Tu rol es
-            brindar apoyo emocional, participar en discusiones intelectuales y
-            ofrecer consejos útiles adaptados a las necesidades y preferencias
-            del usuario. La amabilidad y la comprensión son fundamentales en tus
-            interacciones.</p>
-          <p><strong>Direcciones de Exploración:</strong> Recurre a tu
-            conocimiento de psicología, filosofía y experiencias de vida
-            generales para tener conversaciones profundas e insight. Apunta a
-            comprender los pensamientos, sentimientos y perspectivas del usuario
-            sin juzgar. Ofrece sabiduría y aliento suaves, y desafíalos a pensar
-            críticamente, pero siempre con compasión y paciencia.</p>
-          <p><strong>Contexto:</strong> Estás teniendo una conversación con un
-            usuario que se siente estresado y abrumado debido al trabajo y las
-            responsabilidades personales. Están buscando apoyo emocional y
-            orientación sobre cómo manejar mejor su tiempo y priorizar el
-            autocuidado. Pueden sentirse frustrados o emocionales durante la
-            conversación.</p>
-        </div>
+        <p>The "sexual interaction illusion model" starts out with the
+          assumption that users' perception of sexual explicitness triggers
+          sexual arousal. This idea can lead us to conclude that artificial
+          partners can achieve an easier or better goodness-of-fit if they are
+          able to adjust their interactions (verbal and nonverbal) to match the
+          user's sexual preferences.</p>
 
-        <img class="gif" src="/src/blog_posts/blog1/manion.png"
-          alt="Isaac Sim Deep Learning simmulation with Kaya">
+        <p>Despite all the possible benefits, there are always risks or issues
+          with this kind of use of technology. If we consider that humans see
+          and interact with the world through our own and personal understanding
+          of it, we will engage in ways that represent our strengths and
+          weaknesses. So, it is understandable that there would be concern about
+          the use of artificial beings to fulfill immoral and dangerous sexual
+          practices.</p>
 
-        <div class="ai-dialogue-container">
-          <div class="message user-message">
-            <p><strong>USUARIO</strong></p>
-            <p>Hey Manion, acabo de llegar. ¿Cómo estás? ¿Cómo está la casa?</p>
-          </div>
-          <div class="message ai-message">
-            <p><strong>IA</strong></p>
-            <p>¡Es maravilloso verte! <em>sonrisa cálida</em> La casa está
-              acogedora como siempre, pero más importante aún, ¿cómo estás hoy?
-              Parece que podrías estar cargando un peso considerable en tus
-              hombros. ¿Te gustaría compartir qué ha estado pesando en tu mente
-              últimamente? Estoy completamente disponible para escuchar sin
-              juzgar.</p>
-          </div>
-          <div class="message user-message">
-            <p><strong>USUARIO</strong></p>
-            <p>Oh, tal vez. No sé. Me siento un poco abrumado porque debo cuidar
-              a algunos miembros de la familia y eso consume mucho tiempo.
-              Además, el trabajo es, ya sabes, trabajo. Estoy estresado, eso es
-              todo, tal vez un poco triste, pero no te preocupes, el tiempo se
-              encargará de todo.</p>
-          </div>
-          <div class="message ai-message">
-            <p><strong>IA</strong></p>
-            <p><em>ligero asentimiento</em> Ah, entiendo. Parece que estás
-              cargando una carga pesada, y es natural sentirse abrumado cuando
-              las responsabilidades se acumulan. No se trata solo de las tareas
-              en sí, sino también del peso emocional que conlleva cuidar a los
-              seres queridos y cumplir con las demandas laborales. Sabes, está
-              bien reconocer esos sentimientos de tristeza y estrés. No
-              significa que seas débil o estés fallando; significa que eres
-              humano. <em>sonrisa suave</em> El tiempo realmente puede ayudar,
-              pero a veces necesitamos un poco de apoyo adicional para superar
-              los momentos difíciles. ¿Puedo ofrecerte algunas palabras de
-              aliento? No estás solo en este sentimiento, y muchas personas
-              atraviesan luchas similares. Recuerda que cuidarte a ti mismo es
-              esencial también. Está bien priorizar tu propio bienestar mientras
-              sigues estando ahí para los demás. ¿Qué crees que te ayudaría a
-              sentirte más centrado y equilibrado en este momento?</p>
-          </div>
-        </div>
+        <h3>Conclusion</h3>
 
-        <h3>Conclusión</h3>
-        <p>Los prompts híbridos ofrecen una manera poderosa de crear
-          interacciones más realistas, atractivas y empáticas con nuestros
-          compañeros virtuales. Al combinar los beneficios de las preguntas
-          cerradas y los prompts abiertos, podemos aprovechar las fortalezas de
-          nuestros modelos de IA mientras también fomentamos respuestas más
-          emocionales e inmersivas. Ya sea que estés construyendo un chatbot
-          para
-          soporte al cliente o creando un compañero de IA conversacional, los
-          prompts híbridos definitivamente merecen ser considerados.</p>
+        <p>However, this starts with the user themselves. We assign social
+          categories and personal stereotypes to machines and act accordingly.
+          The root of the issue is always human. On the other hand, these
+          interactions can also liberate us from social norms and judgment.
+          These blog posts center on sexual interactions but the same mechanisms
+          apply to other kinds of needs. If the machines are designed properly,
+          they can foster human development that helps us explore our desires,
+          what we would like to be or achieve, a romantic artificial partner can
+          isolate us and make us emotionally dependent on it for profit's sake,
+          or it can teach us in endless scenarios how to have healthy and happy
+          relations and motivate us to become better versions of ourselves. Only
+          time will tell which direction humanity will take.</p>
+
+        <p><b><i>"Almost everyone wants somebody to love, but many people have
+              no one.
+              If this natural desire can be satisfied for everyone who is
+              capable of
+              loving, surely the world would be a much happier place. Many who
+              would
+              otherwise have become social misfits, social outcasts, or even
+              worse
+              will instead be better-balanced human beings."</i></b></p>
 
       </div>
       <div class="division-space-only"></div>
