--- a/src/blog_posts/blogs_es.html
+++ b/src/blog_posts/blogs_es.html
@@ -31,22 +31,38 @@
             </div>
 
             <article class="project">
+
+                <!-- Blog 2 -->
+                <!-- <div class="card blog2"
+                    onclick="window.location.href = '/es/blogs/synthetic_lover.html'">
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Amantes Sintéticos: Una Nueva era en la
+                                Exploración Sexual</h3>
+                            <p>A medida que la línea entre la ficción y la
+                                realidad se hacen borrosas, una nueva generación
+                                de acompañantes sexuales artificiales emerge.
+                                Cuáles son los impactos de esto en nuestras
+                                relaciones, deseos, y nuestro entendimiento de
+                                que significa ser humano?</p>
+                        </div>
+                    </div>
+                </div> -->
+
                 <!-- Blog 1 -->
                 <div class="card blog1"
                     onclick="window.location.href = '/es/blogs/hybrid_prompts.html'">
-                    <div class="card-aspect-ratio">
-                        <div class="project-info">
-                            <div class="project-bio">
-                                <h3>Prompts híbridos: Guía para una IA
-                                    Conversacional Efectiva</h3>
-                                <p>Descubre cómo combinar preguntas cerradas con
-                                    sugerencias abiertas puede revolucionar tus
-                                    experiencias de inteligencia artificial
-                                    conversacional. Aprende cómo las preguntas
-                                    híbridas pueden ayudar a crear interacciones
-                                    más realistas, atractivas y empáticas con
-                                    seres virtuales.</p>
-                            </div>
+                    <div class="project-info">
+                        <div class="project-bio">
+                            <h3>Prompts híbridos: Guía para una IA
+                                Conversacional Efectiva</h3>
+                            <p>Descubre cómo combinar preguntas cerradas con
+                                sugerencias abiertas puede revolucionar tus
+                                experiencias de inteligencia artificial
+                                conversacional. Aprende cómo las preguntas
+                                híbridas pueden ayudar a crear interacciones
+                                más realistas, atractivas y empáticas con
+                                seres virtuales.</p>
                         </div>
                     </div>
                 </div>
